--- a/QTEquationDrawing/mainwindow.ui
+++ b/QTEquationDrawing/mainwindow.ui
@@ -55,14 +55,14 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>360</y>
+      <x>720</x>
+      <y>370</y>
       <width>121</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
-     <string>Clear</string>
+     <string>delete</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
@@ -81,7 +81,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>580</x>
       <y>20</y>
       <width>71</width>
       <height>20</height>
@@ -102,6 +102,38 @@
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listWidget">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>120</y>
+      <width>401</width>
+      <height>215</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="error_label">
+    <property name="geometry">
+     <rect>
+      <x>585</x>
+      <y>460</y>
+      <width>391</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::DefaultContextMenu</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:rgb(255, 0, 0)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
